<resources>
    <string name="app_name">PictureOfTheDay</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="wiki_search">Wiki</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="before_yesterday">Before Yesterday</string>
    <string name="title_of_the_picture">Title Of The Picture</string>
    <string name="another">Another</string>
    <string name="select_date">Select Date</string>
    <string name="date_of_the_picture">2021.12.10</string>
    <string name="home">Home</string>
    <string name="dark">dark</string>
    <string name="theme_preference">themePreference</string>
    <string name="hd_resolution">HD</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="moon">Moon</string>
    <string name="weather">Weather</string>
    <string name="meteorites">Meteorites</string>
    <string name="space">Space</string>
    <string name="sol">Sol: %1$s</string>
    <string name="camera_name">Camera: %1$s</string>
    <string name="rover_name">Rover: %1$s</string>
    <string name="landing_date">Landing date: %1$s</string>
    <string name="launch_date">Launch date: %1$s</string>
    <string name="rover_status">Status: %1$s</string>
    <string name="nasa_logo">Nasa Logo</string>
    <string name="android_sdk_version">Sdk version %1$s</string>
    <string name="android_version_code">Android version code %1$s</string>
    <string name="moon_picture">Moon Picture</string>
    <string name="moon_title">Title: %1$s</string>
    <string name="moon_bbox">BBox: %1$s</string>
    <string name="moon_abstract">Abstract: %1$s</string>
    <string name="fullscreen_image">Fullscreen Image</string>
    <string name="notes">Notes</string>
    <string name="fab_notes">Fab Notes</string>
    <string name="no_picture_message">For now, there is no image from Nasa, please try a little later or choose another date!</string>
</resources>