<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/space"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_spaces_24"
        android:title="@string/space" />

    <item
        android:id="@+id/notes"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notes_24"
        android:title="@string/notes" />

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
</menu>