<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/moon"
                    android:layout_width="@dimen/dimen_huge_50"
                    android:layout_height="@dimen/dimen_huge_50"
                    android:layout_gravity="start|center_vertical"
                    app:srcCompat="@drawable/full_moon" />

                <ImageView
                    android:id="@+id/nasaLogo"
                    android:layout_width="@dimen/dimen_huge_90"
                    android:layout_height="@dimen/dimen_huge_90"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_medium_16"
                    android:contentDescription="@string/nasa_logo"
                    app:srcCompat="@drawable/ic_nasa_logo" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wikitInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_small_12"
                android:hint="@string/wiki_search"
                app:endIconDrawable="@drawable/ic_notification_icon_wikipedia_logo"
                app:endIconMode="custom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/wikiInputText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_small_8"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/dimen_small_12">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:checkedChip="@+id/chipToday"
                    app:chipSpacingHorizontal="@dimen/dimen_small_12"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipToday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimen_tiny_4"
                        android:checked="true"
                        android:text="@string/today" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipYesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_tiny_4"
                        android:text="@string/yesterday" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipBeforeYesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dimen_tiny_4"
                        android:text="@string/before_yesterday" />

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/datePickerHome"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_calendar_month_24" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.pictureoftheday.widget.CustomImageView
                    android:id="@+id/customImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray_900"
                    android:contentDescription="@string/photo_of_the_day_stub"
                    android:scaleType="fitCenter"
                    android:transitionName="image_big"
                    tools:srcCompat="@tools:sample/avatars" />

                <View
                    android:id="@+id/blurView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black_transparent_64"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <ProgressBar
                    android:id="@+id/loadingProgressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:visibility="visible"
                    tools:visibility="visible" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/gray_900"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_small_12"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    tools:text="@string/date_of_the_picture" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipHdRes"
                    style="@style/Widget.App.Chip.Resolution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_small_12"
                    android:checked="false"
                    android:text="@string/hd_resolution"
                    tools:checked="true" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_small_12"
                android:layout_marginTop="@dimen/dimen_small_12"
                android:fontFamily="@font/roboto_light"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:fontFamily="@font/roboto"
                tools:text="@string/title_of_the_picture" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_small_12"
                android:fontFamily="@font/roboto"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                tools:text="@tools:sample/lorem/random" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/copyRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_small_12"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>

